[package]
name = "leetcode-daily-2408"
version = "0.1.0"
edition = "2021"

[[bin]]
name="240801"
path="./240801.rs"

[[bin]]
name="240802"
path="./240802.rs"

[[bin]]
name="240803"
path="./240803.rs"

[[bin]]
name="240804_weekly_contest_409"
path="./240804_weekly_contest_409.rs"

[[bin]]
name="240804"
path="./240804.rs"

[[bin]]
name="240805"
path="./240805.rs"

[[bin]]
name="240806"
path="./240806.rs"

[[bin]]
name="240807"
path="./240807.rs"

[[bin]]
name="240808"
path="./240808.rs"

[[bin]]
name="240809"
path="./240809.rs"

[[bin]]
name="240810"
path="./240810.rs"

[[bin]]
name="240811"
path="./240811.rs"

[[bin]]
name="240812"
path="./240812.rs"

[[bin]]
name="240813"
path="./240813.rs"